--- a/.env
+++ b/.env
@@ -7,3 +7,24 @@ DB_PASS=""
 DB_NAME=coffee
 
 JWT_SECRET=D212S1F231D35F45G45H4YJ351HN0BVN2N1NHF456N4F8B79D78D4B0FB
+
+# 商店 ID
+LINEPAY_CHANNEL_ID=1657327904
+
+# 商店密鑰（不可外流）
+LINEPAY_CHANNEL_SECRET_KEY=
+
+# API 版本
+LINEPAY_VERSION=v3
+
+# LINE Pay 站點，以下為測試機位置
+LINEPAY_SITE=https://sandbox-api-pay.line.me
+
+# 金流轉址位置，可用本地端
+LINEPAY_RETURN_HOST=http://localhost:3000/
+
+# 金流確認的 Router - 轉回來的網址
+LINEPAY_RETURN_CONFIRM_URL=
+
+# 金流取消的 Router
+LINEPAY_RETURN_CANCEL_URL=linepay/cancel
