--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ JWT_SECRET=D212S1F231D35F45G45H4YJ351HN0BVN2N1NHF456N4F8B79D78D4B0FB
 # 商店 ID
 LINEPAY_CHANNEL_ID=1657327904
 
-# 商店密鑰（不可外流）
-LINEPAY_CHANNEL_SECRET_KEY=
+# 商店密鑰
+LINEPAY_CHANNEL_SECRET_KEY=ea76bfd85001202802252a448817107f
 
 # API 版本
 LINEPAY_VERSION=v3
